==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/driver/gpio_driver/pic32/GpioDrv.c <==
#include "trace.h"
#include "./GpioDrv_priv.h"

void GpioDrv_Ctor(cGpioDrv *me, const tGPIODevice *pConfig )
{
    uint8 i;
    ASSERT(me && pConfig);
    me->gpioConfig = pConfig;
    for(i = 0; i < pConfig->usedGPIOPinNum; i++)
    {
        switch(pConfig->pGPIOPinSet[i].gpioDirection)
        {
            case GPIO_DIGITAL_INPUT:
            {
                 PORTSetPinsDigitalIn(pic32IoPort[pConfig->pGPIOPinSet[i].gpioPort],\
                         (1<<pConfig->pGPIOPinSet[i].gpioBit));
                 if(GPIO_ACTIVE_LOW == pConfig->pGPIOPinSet[i].gpioInitAttr)
                 {
                     GpioDrv_SetPullUp(pConfig->pGPIOPinSet[i].gpioPort,\
                             pConfig->pGPIOPinSet[i].gpioBit);
                 }
                 break;
            }
            case GPIO_DIGITAL_OUTPUT:
            {
                 PORTSetPinsDigitalOut(pic32IoPort[pConfig->pGPIOPinSet[i].gpioPort],\
                         1<<pConfig->pGPIOPinSet[i].gpioBit);
                 //if(ODC_OPEN == pConfig->tGPIOPins[i].odc)
                 //{
                    /* mPORTXOpenDrainOpen */
                 //}
                 break;
            }
            case GPIO_ANALOG_INPUT:
            {
                PORTSetPinsAnalogIn(pic32IoPort[pConfig->pGPIOPinSet[i].gpioPort],\
                         1<<pConfig->pGPIOPinSet[i].gpioBit);
                break;
            }
            case GPIO_ANALOG_OUTPUT:
            {
                PORTSetPinsAnalogOut(pic32IoPort[pConfig->pGPIOPinSet[i].gpioPort],\
                         1<<pConfig->pGPIOPinSet[i].gpioBit);
                break;
            }
            case GPIO_BIDIRECTION:
            {
                /**
                 * the defualt direction is the the CPU defualt direction when
                 * MCU is power on, user need to call the public functions to
                 * set the direction if it is required.
                 */
                if(GPIO_ACTIVE_LOW == pConfig->pGPIOPinSet[i].gpioInitAttr)
                {
                    GpioDrv_SetPullUp(pConfig->pGPIOPinSet[i].gpioPort,\
                             pConfig->pGPIOPinSet[i].gpioBit);
                }
                break;
            }
            default:break;
        }
    }
    me->isCreated = TRUE;
}

void GpioDrv_Xtor(cGpioDrv *me)
{
    ASSERT(me);
    uint8 i;
    me->isCreated = FALSE;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
       PORTSetPinsDigitalIn(pic32IoPort[me->gpioConfig->pGPIOPinSet[i].gpioPort],\
                    1<<me->gpioConfig->pGPIOPinSet[i].gpioBit);
       GpioDrv_ClearPullUp(me->gpioConfig->pGPIOPinSet[i].gpioPort,\
                    me->gpioConfig->pGPIOPinSet[i].gpioBit);
    }
}

void GpioDrv_SetDigitalIn(cGpioDrv *me, eGPIOId gpioId)
{
    uint8 i;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        /* only the gpio pin which has GPIO_BIDIRECTION feature has the access
         * to this function, otherwise, return fail */
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId && \
            GPIO_BIDIRECTION == me->gpioConfig->pGPIOPinSet[i].gpioDirection)
        {
            PORTSetPinsDigitalIn(pic32IoPort[me->gpioConfig->pGPIOPinSet[i].gpioPort],\
                    1<<me->gpioConfig->pGPIOPinSet[i].gpioBit);
            return;
        }
    }
    ASSERT(0);/* gpioId doesn't belong to me,somewhere is seriously wrong */
}

void GpioDrv_SetDigitalOut(cGpioDrv *me, eGPIOId gpioId)
{
    uint8 i;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId &&\
                 GPIO_BIDIRECTION == me->gpioConfig->pGPIOPinSet[i].gpioDirection)
        {
            PORTSetPinsDigitalOut(pic32IoPort[me->gpioConfig->pGPIOPinSet[i].gpioPort],\
                    1<<me->gpioConfig->pGPIOPinSet[i].gpioBit);
            return ;
        }
    }
    ASSERT(0); /* gpioId doesn't belong to me,somewhere is seriously wrong */
}

void GpioDrv_SetBit(cGpioDrv *me, eGPIOId gpioId)
{
    uint8 i;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId)
        {
            PORTSetBits(pic32IoPort[me->gpioConfig->pGPIOPinSet[i].gpioPort],\
                    1<<me->gpioConfig->pGPIOPinSet[i].gpioBit);
            return;
        }
    }
    ASSERT(0);/* gpioId doesn't belong to me,somewhere is seriously wrong */
}

int8 GpioDrv_ReadBit(cGpioDrv *me, eGPIOId gpioId)
{
    int8 rtnValue  = TP_ACCESS_ERROR;
    uint8 i        = 0;

    for(i = 0; i < (me->gpioConfig->usedGPIOPinNum); i++)
    {
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId)
        {
            if(PORTReadBits(pic32IoPort[me->gpioConfig->pGPIOPinSet[i].gpioPort],\
                    1<<me->gpioConfig->pGPIOPinSet[i].gpioBit))
            {
                rtnValue = 1; /* High */
            }
            else
            {
                rtnValue = 0; /* Low */
            }
            break;
        }
    }
    /* gpioId doesn't belong to me,somewhere is seriously wrong */
    ASSERT(TP_ACCESS_ERROR != rtnValue);
    return rtnValue;
}

void GpioDrv_ClearBit(cGpioDrv *me, eGPIOId gpioId)
{
    uint8 i;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId)
        {
            PORTClearBits(pic32IoPort[me->gpioConfig->pGPIOPinSet[i].gpioPort],\
                    1<<me->gpioConfig->pGPIOPinSet[i].gpioBit);
            return;
        }
    }
    ASSERT(0); /* gpioId doesn't belong to me,somewhere is seriously wrong */
}
