==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/driver/gpio_driver/gd32/GpioDrv.c <==
#include "trace.h"
#include "./GpioDrv_priv.h"

void GpioDrv_Ctor(cGpioDrv *me, const tGPIODevice *pConfig )
{
    ASSERT(me && pConfig);
    GPIO_InitTypeDef GPIOInitStr;
    uint8 i = 0;
    me->gpioConfig = pConfig;
    GPIOInitStr.GPIO_Speed = GPIO_Speed_50MHz;
    /* GPIOC Periph clock enable */
    for(i = 0; i < pConfig->usedGPIOPinNum; i++)
    {
        RCC_AHBPeriphClockCmd(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].rccAhbPeriph, ENABLE);
        GPIOInitStr.GPIO_Pin = (1<<pConfig->pGPIOPinSet[i].gpioBit);       
        switch(pConfig->pGPIOPinSet[i].gpioDirection)
        {
            case GPIO_BIDIRECTION:
            case GPIO_DIGITAL_INPUT:
            {
                if(GPIO_DIGITAL_INPUT==pConfig->pGPIOPinSet[i].gpioDirection) {
                    ASSERT(ODC_NOT_APPLICABLE==pConfig->pGPIOPinSet[i].openDrainControl);
                }
                else { //GPIO_BIDIRECTION
                    ASSERT(ODC_NOT_APPLICABLE!=pConfig->pGPIOPinSet[i].openDrainControl);
                }
                GPIOInitStr.GPIO_Mode = GPIO_Mode_IN;
                if(GPIO_ACTIVE_LOW == pConfig->pGPIOPinSet[i].gpioInitAttr)
                {
                    GPIOInitStr.GPIO_PuPd = GPIO_PuPd_UP;
                }
                else if (GPIO_ACTIVE_HIGH == pConfig->pGPIOPinSet[i].gpioInitAttr)
                {
                    GPIOInitStr.GPIO_PuPd = GPIO_PuPd_DOWN;
                }
                else if (GPIO_ACTIVE_FLOATING == pConfig->pGPIOPinSet[i].gpioInitAttr)
                {
                    GPIOInitStr.GPIO_PuPd = GPIO_PuPd_NOPULL;
                }
                else
                {
                    ASSERT(0);
                }
                break;
            }
            case GPIO_DIGITAL_OUTPUT:
            {
                GPIOInitStr.GPIO_Mode = GPIO_Mode_OUT;

                //Set open drain mode
                GPIOInitStr.GPIO_PuPd = GPIO_PuPd_NOPULL;
                if(ODC_ENABLE == pConfig->pGPIOPinSet[i].openDrainControl)
                {
                    GPIOInitStr.GPIO_OType = GPIO_OType_OD;
                }
                else if(ODC_DISABLE == pConfig->pGPIOPinSet[i].openDrainControl)
                {
                    GPIOInitStr.GPIO_OType = GPIO_OType_PP;
                }
                else
                {
                   ASSERT(0);
                }

                //Set default value
                if (pConfig->pGPIOPinSet[i].gpioInitAttr == GPIO_DEFAULT_OUT_HIGH)
                {
                    GpioDrv_SetBit_(me, pConfig->pGPIOPinSet[i].gpioId);
                }
                else if (pConfig->pGPIOPinSet[i].gpioInitAttr == GPIO_DEFAULT_OUT_LOW)
                {
                   GpioDrv_ClearBit_(me, pConfig->pGPIOPinSet[i].gpioId);
                }
                else if (pConfig->pGPIOPinSet[i].gpioInitAttr == GPIO_DEFAULT_OUT_FLOATING)
                {
                }
                else
                {
                   ASSERT(0);
                }

                break;
            }
            case GPIO_ANALOG_INPUT:
            {
                GPIOInitStr.GPIO_Mode = GPIO_Mode_AN;
                GPIOInitStr.GPIO_PuPd = GPIO_PuPd_NOPULL;
                break;
            }
            case GPIO_ANALOG_OUTPUT:
            {
                GPIOInitStr.GPIO_Mode = GPIO_Mode_AN;
                GPIOInitStr.GPIO_PuPd = GPIO_PuPd_NOPULL;
                break;
            }
            default:break;
        }
        GPIO_Init(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].pMCUgpioPort, &GPIOInitStr);
    }
    me->isCreated = TRUE;
}

void GpioDrv_Xtor(cGpioDrv *me)
{
    ASSERT(me);
    GPIO_InitTypeDef GPIOInitStr;
    uint8 i = 0;
    me->isCreated = FALSE;
    GPIOInitStr.GPIO_Speed = GPIO_Speed_50MHz;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        GPIOInitStr.GPIO_Pin = (1 << (me->gpioConfig->pGPIOPinSet[i].gpioBit));       
        GPIOInitStr.GPIO_PuPd = GPIO_PuPd_NOPULL;
        GPIOInitStr.GPIO_Mode = GPIO_Mode_IN;
        GPIO_Init(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].pMCUgpioPort, &GPIOInitStr);
    }
}

static void GpioDrv_SetBit_(cGpioDrv *me, eGPIOId gpioId)
{
    uint32 gpioPinBit = 0;
    uint8 i = 0;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        gpioPinBit = (1<<(me->gpioConfig->pGPIOPinSet[i].gpioBit));
        
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId)
        {
            /* For bidiretional pin, assume it is on OUTPUT mode */          
            GPIO_SetBits(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].pMCUgpioPort,gpioPinBit);
            return;
        }
    }
    ASSERT(0); /* gpioId doesn't belong to me,somewhere is seriously wrong */
}

static void GpioDrv_ClearBit_(cGpioDrv *me, eGPIOId gpioId)
{
    uint16 gpioPinBit;
    uint8 i = 0;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId)
        {
            /* For bidiretional pin, assume it is on OUTPUT mode */          
            gpioPinBit = (1 << (me->gpioConfig->pGPIOPinSet[i].gpioBit));
            GPIO_WriteBit(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].pMCUgpioPort, gpioPinBit,Bit_RESET);
            return;
        }
    }
    ASSERT(0); /* gpioId doesn't belong to me,somewhere is seriously wrong */
}

void GpioDrv_SetDigitalIn(cGpioDrv *me, eGPIOId gpioId)
{
    ASSERT(me && me->isCreated);
    
    GPIO_InitTypeDef GPIOInitStr;
    uint8 i = 0;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        /* only the gpio pin which has GPIO_BIDIRECTION feature has the access
         * to this function, otherwise, return fail. */
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId )
        {
            ASSERT(GPIO_BIDIRECTION == me->gpioConfig->pGPIOPinSet[i].gpioDirection);
            
            GPIOInitStr.GPIO_Speed = GPIO_Speed_50MHz;
            GPIOInitStr.GPIO_Pin = (1 << (me->gpioConfig->pGPIOPinSet[i].gpioBit));
            GPIOInitStr.GPIO_Mode = GPIO_Mode_IN;
            if(GPIO_ACTIVE_LOW == me->gpioConfig->pGPIOPinSet[i].gpioInitAttr)
            {
                GPIOInitStr.GPIO_PuPd = GPIO_PuPd_UP;
            }
            else if(GPIO_ACTIVE_HIGH == me->gpioConfig->pGPIOPinSet[i].gpioInitAttr)
            {
                GPIOInitStr.GPIO_PuPd = GPIO_PuPd_DOWN;
            }
            else if (GPIO_ACTIVE_FLOATING == me->gpioConfig->pGPIOPinSet[i].gpioInitAttr)
            {
                GPIOInitStr.GPIO_PuPd = GPIO_PuPd_NOPULL;
            }
            else
            {
                ASSERT(0);
            }
            GPIO_Init(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].pMCUgpioPort, &GPIOInitStr);
            return;
        }
    }
    ASSERT(0); /* gpioId doesn't belong to me,somewhere is seriously wrong */
}

void GpioDrv_SetDigitalOut(cGpioDrv *me, eGPIOId gpioId)
{
    ASSERT(me && me->isCreated);
    
    GPIO_InitTypeDef GPIOInitStr;
    uint8 i = 0;
    for(i = 0; i < me->gpioConfig->usedGPIOPinNum; i++)
    {
        /* only the gpio pin which has GPIO_BIDIRECTION feature has the access
         * to this function, otherwise, return fail. */
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId )
        {
            ASSERT(GPIO_BIDIRECTION == me->gpioConfig->pGPIOPinSet[i].gpioDirection);
            
            GPIOInitStr.GPIO_Speed = GPIO_Speed_50MHz;
            GPIOInitStr.GPIO_Pin = (1 << (me->gpioConfig->pGPIOPinSet[i].gpioBit));
            GPIOInitStr.GPIO_Mode = GPIO_Mode_OUT;
            
            //Set open drain mode
            GPIOInitStr.GPIO_PuPd = GPIO_PuPd_NOPULL;
            if(ODC_ENABLE == me->gpioConfig->pGPIOPinSet[i].openDrainControl)
            {
                GPIOInitStr.GPIO_OType = GPIO_OType_OD;
            }
            else if(ODC_DISABLE == me->gpioConfig->pGPIOPinSet[i].openDrainControl)
            {
                GPIOInitStr.GPIO_OType = GPIO_OType_PP;
            }
            else
            {
               ASSERT(0);
            }
            
            GPIO_Init(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].pMCUgpioPort, &GPIOInitStr);
            return;
        }
    }
    ASSERT(0); /* gpioId doesn't belong to me,somewhere is seriously wrong */
}

void GpioDrv_SetBit(cGpioDrv *me, eGPIOId gpioId)
{
    ASSERT(me && me->isCreated);
    GpioDrv_SetBit_(me, gpioId);
}

int8 GpioDrv_ReadBit(cGpioDrv *me, eGPIOId gpioId)
{
    ASSERT(me && me->isCreated);
    
    int8 rtnValue = TP_ACCESS_ERROR;
    uint8 i       = 0;
    for(i = 0; i < (me->gpioConfig->usedGPIOPinNum); i++)
    {
        if (gpioId == me->gpioConfig->pGPIOPinSet[i].gpioId)
        {
            rtnValue = GPIO_ReadInputDataBit(ioInfo[(me->gpioConfig->pGPIOPinSet[i].gpioPort)].pMCUgpioPort, \
                                  (1<<me->gpioConfig->pGPIOPinSet[i].gpioBit));
            break;
        }
    }
    /* gpioId doesn't belong to me,somewhere is seriously wrong */
    ASSERT(TP_ACCESS_ERROR != rtnValue);
    return rtnValue;
}

void GpioDrv_ClearBit(cGpioDrv *me, eGPIOId gpioId)
{
    ASSERT(me && me->isCreated);
    GpioDrv_ClearBit_(me, gpioId);
}
